# CircularGate

./: CMakeLists.txt
resource/: Info.plist  Thumbs.db  ca_editor.uidesc  thoughts.doc  win32resource.aps
source/: cCirclesKnobFactory.cpp  cPulseButtonFactory.cpp  cSegmentsButtonFactory.cpp  ca_cids.h  ca_circles.cpp  ca_circles.h  ca_controller.cpp  ca_controller.h  ca_entry.cpp  ca_processor.cpp  ca_processor.h  ca_pulseButton.cpp  ca_pulseButton.h  ca_segments.cpp  ca_segments.h  ca_sequence.cpp  ca_sequence.h  circle.cpp  circle.h  circleView.cpp  params.h  version.h
